# game-of-life

./: LICENSE  game-of-life.cabal
src/: Main.hs
